fixed custom scrollbar modals

--- a/src/index.css
+++ b/src/index.css
@@ -9,21 +9,25 @@ html {
 }
 
 /* Custom Scrollbar */
-body {
+body,
+.portfolio-scrollbar {
 	--sb-track-color: #1332a2b0;
 	--sb-thumb-color: #0f2166;
 	--sb-size: 8px;
 }
 
-body::-webkit-scrollbar {
+body::-webkit-scrollbar,
+.portfolio-scrollbar::-webkit-scrollbar {
 	width: var(--sb-size);
 }
 
-body::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track,
+.portfolio-scrollbar::-webkit-scrollbar-track {
 	background: var(--sb-track-color);
 }
 
-body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,
+.portfolio-scrollbar::-webkit-scrollbar-thumb {
 	background: var(--sb-thumb-color);
 	border-radius: 4px;
 	border: 2px solid #bdc9f7;
@@ -31,6 +35,9 @@ body::-webkit-scrollbar-thumb {
 
 @supports not selector(::-webkit-scrollbar) {
 	body {
+		scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+	}
+	.portfolio-scrollbar {
 		scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
 	}
 }
